Ajout de la section Autre

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     data-bs-slide-to="4">Portofolio dev</button></div>
             <div class="nav-item"> <button class="btn btn-secondary" type="button" data-bs-target="#carouselcard"
                     data-bs-slide-to="5">Contact</button></div>
+                    <div class="nav-item"> <button class="btn btn-secondary" type="button" data-bs-target="#carouselcard"
+                        data-bs-slide-to="6">Autre</button></div>
         </div>
     </nav>
 
@@ -162,12 +164,14 @@
                 <div class="container col-xxl-8 px-4 py-5">
                     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                         <div class="col-10 col-sm-8 col-lg-6">
-                            <img src="assets/img/Amiens_map.png" class="d-block mx-lg-auto img-fluid rounded-2 shadow-lg" alt="Ville d'amiens"
+                            <img src="assets/img/Amiens_map.png"
+                                class="d-block mx-lg-auto img-fluid rounded-2 shadow-lg" alt="Ville d'amiens"
                                 width="700" height="500" loading="lazy">
                         </div>
                         <div class="col-lg-6">
                             <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Contact</h1>
-                            <p class="lead text-white">Disponible pour rendez-vous dans tout l'agglomeration d'amiens ainsi qu'a distance </p>
+                            <p class="lead text-white">Disponible pour rendez-vous dans tout l'agglomeration d'amiens
+                                ainsi qu'a distance </p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                 <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">E-mail</button>
                                 <button type="button" class="btn btn-outline-secondary btn-lg px-4">LinkedIn</button>
@@ -175,9 +179,89 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="carousel-item w-100">
+                <div class="container px-4 py-5" id="custom-cards">
+                    <h2 class="pb-2 border-bottom text-white">Autre</h2>
 
+                    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('unsplash-photo-1.jpg');">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Formateur Anglais</h2>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white">
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#geo-fill" /></svg>
+                                            <small>Earth</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#calendar3" /></svg>
+                                            <small>3d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('unsplash-photo-2.jpg');">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Compositeur</h2>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white">
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#geo-fill" /></svg>
+                                            <small>Pakistan</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#calendar3" /></svg>
+                                            <small>4d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('unsplash-photo-3.jpg');">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here
+                                    </h2>
+                                    <ul class="d-flex list-unstyled mt-auto">
+                                        <li class="me-auto">
+                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
+                                                height="32" class="rounded-circle border border-white">
+                                        </li>
+                                        <li class="d-flex align-items-center me-3">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#geo-fill" /></svg>
+                                            <small>California</small>
+                                        </li>
+                                        <li class="d-flex align-items-center">
+                                            <svg class="bi me-2" width="1em" height="1em">
+                                                <use xlink:href="#calendar3" /></svg>
+                                            <small>5d</small>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
