--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     data-bs-slide-to="4">Portofolio dev</button></div>
             <div class="nav-item"> <button class="btn btn-secondary" type="button" data-bs-target="#carouselcard"
                     data-bs-slide-to="5">Contact</button></div>
-                    <div class="nav-item"> <button class="btn btn-secondary" type="button" data-bs-target="#carouselcard"
-                        data-bs-slide-to="6">Autre</button></div>
+            <div class="nav-item"> <button class="btn btn-secondary" type="button" data-bs-target="#carouselcard"
+                    data-bs-slide-to="6">Autre</button></div>
         </div>
     </nav>
 
@@ -239,7 +239,7 @@
                             <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
                                 style="background-image: url('unsplash-photo-3.jpg');">
                                 <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Format PDF
                                     </h2>
                                     <ul class="d-flex list-unstyled mt-auto">
                                         <li class="me-auto">
