finition de la maquette du CV

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <div class="carousel-item w-100">
                 <div class="row gap-md-4 justify-content-center">
                     <div class="card mb-2  col-md-6" style="width: 18rem;">
+                        <img src="assets/img/Mediametrie.png" style="height: 14.5rem" alt="Logo mediametrie">
                         <div class="card-body">
                             <h5 class="card-title"> Télé-enqueteur Médiamétrie</h5>
                             <p class="card-text">Bla bla relation client</p>
@@ -87,6 +88,7 @@
                         </div>
                     </div>
                     <div class="card  mb-2 col-md-6" style="width: 18rem;">
+                        <img src="assets/img/question-solid.svg" style="height: 14.5rem" alt="inconue">
                         <div class="card-body">
                             <h5 class="card-title">Stage de formation</h5>
                             <p class="card-text">Soon</p>
@@ -139,6 +141,7 @@
             <div class="carousel-item w-100">
                 <div class="row gap-md-5 justify-content-center">
                     <div class="card mb-2  col-md-6" style="width: 18rem;">
+                        <img src="assets/img/Judgement.png" alt="Carte tarot jugement">
                         <div class="card-body">
                             <h5 class="card-title">Exercice flex carte</h5>
                             <p class="card-text">Exercice réalisé lors de la première semaine de formation web dev</p>
@@ -147,6 +150,7 @@
                         </div>
                     </div>
                     <div class="card  mb-2 col-md-6" style="width: 18rem;">
+                        <img src="assets/img/Logo_Amiens_Mairie.svg" alt="Logo_Amiens_Mairie">
                         <div class="card-body">
                             <h5 class="card-title">Exercice groupe méthode agiles</h5>
                             <p class="card-text">Exercice réalisé lors de la seconde semaine de formation web dev, j'ai
@@ -190,22 +194,6 @@
                                 style="background-image: url('unsplash-photo-1.jpg');">
                                 <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                     <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Formateur Anglais</h2>
-                                    <ul class="d-flex list-unstyled mt-auto">
-                                        <li class="me-auto">
-                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
-                                                height="32" class="rounded-circle border border-white">
-                                        </li>
-                                        <li class="d-flex align-items-center me-3">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#geo-fill" /></svg>
-                                            <small>Earth</small>
-                                        </li>
-                                        <li class="d-flex align-items-center">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#calendar3" /></svg>
-                                            <small>3d</small>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -215,22 +203,6 @@
                                 style="background-image: url('unsplash-photo-2.jpg');">
                                 <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                                     <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Compositeur</h2>
-                                    <ul class="d-flex list-unstyled mt-auto">
-                                        <li class="me-auto">
-                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
-                                                height="32" class="rounded-circle border border-white">
-                                        </li>
-                                        <li class="d-flex align-items-center me-3">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#geo-fill" /></svg>
-                                            <small>Pakistan</small>
-                                        </li>
-                                        <li class="d-flex align-items-center">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#calendar3" /></svg>
-                                            <small>4d</small>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -241,22 +213,6 @@
                                 <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                                     <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Format PDF
                                     </h2>
-                                    <ul class="d-flex list-unstyled mt-auto">
-                                        <li class="me-auto">
-                                            <img src="https://github.com/twbs.png" alt="Bootstrap" width="32"
-                                                height="32" class="rounded-circle border border-white">
-                                        </li>
-                                        <li class="d-flex align-items-center me-3">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#geo-fill" /></svg>
-                                            <small>California</small>
-                                        </li>
-                                        <li class="d-flex align-items-center">
-                                            <svg class="bi me-2" width="1em" height="1em">
-                                                <use xlink:href="#calendar3" /></svg>
-                                            <small>5d</small>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
